--- a/TouristGuide/TouristGuide.csproj
+++ b/TouristGuide/TouristGuide.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Helpers\DbHelpers.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Attraction.cs" />
+    <Compile Include="Models\AttractionImage.cs" />
     <Compile Include="Models\AttractionType.cs" />
     <Compile Include="Models\AttractionReview.cs" />
     <Compile Include="Models\Coordinates.cs" />
@@ -188,9 +189,13 @@
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.js" />
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <Content Include="Scripts\jquery.galleriffic.js" />
+    <Content Include="Scripts\jquery.history.js" />
+    <Content Include="Scripts\jquery.opacityrollover.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jush.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Scripts\NewsDateHelper-edit.js" />
@@ -229,6 +234,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\AttractionImages\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -337,6 +343,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\WebService\Delete.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Place\EditorTemplates\Country.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
