--- a/TouristGuide/web.config
+++ b/TouristGuide/web.config
@@ -21,6 +21,8 @@
     </appSettings>
 
     <system.web>
+        <globalization culture="en-US" uiCulture="en-US" />
+        
         <compilation debug="true" targetFramework="4.0">
             <assemblies>
                 <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
