Final commit for WWW class

--- a/TouristGuide.Tests/TouristGuide.Tests.csproj
+++ b/TouristGuide.Tests/TouristGuide.Tests.csproj
@@ -45,6 +45,9 @@
     <Reference Include="pnunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks">
+      <HintPath>..\packages\RhinoMocks.3.6\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -70,6 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\NewsControllerTest.cs" />
+    <Compile Include="Models\MockDbSet.cs" />
+    <Compile Include="Models\MockTouristGuideDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -85,6 +90,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"$(SolutionDir)packages\NUnit.2.5.10.11092\tools\nunit-console.exe" "$(TargetPath)"</PostBuildEvent>
