--- a/TouristGuide/web.config
+++ b/TouristGuide/web.config
@@ -10,7 +10,7 @@
             connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=TouristGuideDB"
             providerName="System.Data.SqlClient" />
         <add name="TouristGuideDB"
-           connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=TouristGuideDB"
+           connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=TouristGuideDB;MultipleActiveResultSets=True"
            providerName="System.Data.SqlClient" />
     </connectionStrings>
 
