--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@ TouristGuide/bin
 TouristGuide/obj
 TouristGuide.Tests/bin
 TouristGuide.Tests/obj
+TouristGuide.Azure/bin
+TouristGuide.Azure/obj
+TouristGuide.Azure/csx
 TouristGuide.suo
 TouristGuide/App_Data
