--- a/TouristGuide/web.config
+++ b/TouristGuide/web.config
@@ -5,9 +5,15 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="Data Source=MATI-PC;Initial Catalog=TouristGuideDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TouristGuideDB" connectionString="Data Source=MATI-PC;Initial Catalog=TouristGuideDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TouristGuideDBEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=MATI-PC;Initial Catalog=TouristGuideDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="ApplicationServices"
+            connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=TouristGuideDB;MultipleActiveResultSets=True"
+            providerName="System.Data.SqlClient" />
+    <add name="TouristGuideDB"
+       connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=TouristGuideDB;MultipleActiveResultSets=True"
+       providerName="System.Data.SqlClient" />
+    <add name="TouristGuideDBEntities" 
+       connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=TouristGuideDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" 
+       providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
