--- a/TouristGuide/TouristGuide.csproj
+++ b/TouristGuide/TouristGuide.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PlaceController.cs" />
     <Compile Include="Controllers\WebServiceController.cs" />
+    <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -378,6 +379,27 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Attraction\Partial\ShowMore.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Place\Partial\Autocomplete.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Place\DisplayTemplates\Place.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Place\GetPlaces.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Country\DisplayTemplates\Country.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Country\Partial\Autocomplete.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Country\GetCountries.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Attraction\GetReview.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
