--- a/TouristGuide/TouristGuide.csproj
+++ b/TouristGuide/TouristGuide.csproj
@@ -77,6 +77,9 @@
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.Helpers">
+      <HintPath>..\packages\microsoft-web-helpers.1.15\lib\Microsoft.Web.Helpers.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <Private>True</Private>
     </Reference>
@@ -126,6 +129,7 @@
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\GenerateController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MyAttractionController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PlaceController.cs" />
     <Compile Include="Controllers\WebServiceController.cs" />
@@ -146,7 +150,9 @@
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\ITouristGuideDB.cs" />
+    <Compile Include="Models\MyAttraction.cs" />
     <Compile Include="Models\Place.cs" />
+    <Compile Include="Models\PushPinModel.cs" />
     <Compile Include="Models\TouristGuideDB.cs" />
     <Compile Include="Models\News.cs" />
     <Compile Include="Models\NewsTimeViewModel.cs" />
@@ -234,6 +240,7 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
+    <Content Include="Release Notes - Microsoft.Web.Helpers.txt" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
@@ -246,6 +253,7 @@
     <Content Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Scripts\NewsDateHelper-edit.js" />
     <Content Include="Scripts\NewsDateHelper.js" />
+    <Content Include="Scripts\VeJavaScriptIntellisenseHelper.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -423,6 +431,21 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Attraction\GetReview.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MyAttraction\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MyAttraction\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MyAttraction\Create.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MyAttraction\Edit.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MyAttraction\Delete.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
